@@ -7,6 +7,7 @@ Homepage: http://www.pip-installer.org/
 Build-Depends: debhelper (>= 8),
                dh-python,
                python-all (>= 2.6),
+               python-docutils,
                python-mock,
                python-pytest,
                python-scripttest,
