@@ -1,1 +1,1 @@
-debian/pip.1
+debian/tmp/pip.man
